--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="quiz.css">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
@@ -17,6 +17,7 @@
         </div>
         <div id="score">Score : 0</div>
     </div>
-    <script src="quiz.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
